# panic-project-slc-g9

./: README.md  dashboard.py  pyproject.toml  requirements.txt  run.py  setup.py
.scrapy/httpcache/amazon/05/056860b73cce6f6ad90291a51cdf5d43979ca7b9/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/amazon/0f/0f589ae7bd9fe00830130638e2dce33eedf9501d/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/amazon/1a/1a58299781b704108ae33f6263ceb38cfd1744e0/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/amazon/34/34fbf3ccfee1eb361b415837d0a92f1b5734ef69/: meta  pickled_meta  request_headers  response_headers
.scrapy/httpcache/amazon/35/35a9539acbe2bef37be4fb589d750ea66b5e5de5/: meta  pickled_meta  request_headers  response_body  response_headers
.scrapy/httpcache/amazon/42/42ba141d085853c431305828ffa69c2ecabf154f/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/amazon/43/43e97f0733a357f534eb6948725a6ad3722e74e2/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/amazon/50/50a5ab46bb2435d834256c32b628d8e4c120fe3f/: meta  pickled_meta  response_headers
assets/: style.css
data/: products.db
data/exports/: iphone_16_20250302_233734.csv  smartphone_20250302_212517.csv
database/: __init__.py  models.py
shop_scraper/: __init__.py  items.py  pipelines.py  settings.py
shop_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shop_scraper/spiders/: amazon.py  ebay.py  walmart.py
(+104 files in other folders)
