[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shop_scraper"
version = "0.1"
description = "E-Commerce Price Scraper"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "scrapy>=2.5.0",
    "sqlalchemy>=1.4.0",
    "pandas>=1.3.0",
    "plotly>=5.3.0",
    "dash>=2.0.0",
]

[tool.setuptools]
packages = ["shop_scraper", "database"]

[tool.pylance]
reportMissingImports = "warning" 